--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll-parallax": "^3.4.2",
+    "react-simple-typewriter": "^5.0.1",
+    "react-social-icons": "6.3.0",
+    "react-ts-typewriter": "^0.1.8-b"
+  },
+  "devDependencies": {
     "typescript": "5.0.3"
   }
 }
